[package]
name = "ryu-skills"
version = "0.0.9"
edition = "2021"
license = "Apache-2.0"
description = "Agent Skills: the SKILL.md registry, dual-root (~/.claude + ~/.agents) scan, progressive-disclosure injection block, authoring + version history, and the `/api/skills/*` CRUD surface — an extracted Core capability crate. Kernel-required (the registry is injected into every chat turn), in-process only. Core consumes it as a path dependency and injects the ryu data dir + implements `Runnable` for `SkillRecord` host-side, so this crate has ZERO dependency on apps/core."
repository = "https://github.com/amajorai/ryu"

# Versions are matched to apps/core/Cargo.toml so the in-process merge into Core's
# axum router has no version skew. This crate has ZERO dependency on apps/core.
[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tracing = "0.1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

[dev-dependencies]
tempfile = "3"
